# InstagramManager-MVP

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.streamlit/: config.toml
backend/: main.py
backend/ai/: generator.py
backend/app/: richieste.py
backend/dao/: base_dao.py  post_dao.py
backend/database/: connection.py
backend/schemas/: post.py
frontend/: app.py
frontend/services/: api_client.py  gemini_service.py
